Rename staff -> scepter

--- a/src/main/resources/assets/spellcraft/lang/en_us.json
+++ b/src/main/resources/assets/spellcraft/lang/en_us.json
@@ -1,4 +1,4 @@
 {
   "itemGroup.spellcraft": "Spellcraft",
-  "item.spellcraft.wooden_staff": "Wooden Staff"
+  "item.spellcraft.wooden_scepter": "Wooden Scepter"
 }
