Add some initial scepters
- Emerald scepter (Illager)
- Nether scepter
- Ender scepter

--- a/src/main/resources/assets/spellcraft/lang/en_gb.json
+++ b/src/main/resources/assets/spellcraft/lang/en_gb.json
@@ -1,4 +1,7 @@
 {
   "itemGroup.spellcraft": "Spellcraft",
-  "item.spellcraft.wooden_scepter": "Wooden Sceptre"
+  "item.spellcraft.wooden_scepter": "Wooden Sceptre",
+  "item.spellcraft.emerald_scepter": "Emerald Sceptre",
+  "item.spellcraft.ender_scepter": "Ender Sceptre",
+  "item.spellcraft.nether_scepter": "Nether Sceptre"
 }
