--- a/src/main/resources/assets/spellcraft/lang/en_us.json
+++ b/src/main/resources/assets/spellcraft/lang/en_us.json
@@ -2,6 +2,7 @@
   "itemGroup.spellcraft": "Spellcraft",
   "item.spellcraft.wooden_scepter": "Wooden Scepter",
   "item.spellcraft.emerald_scepter": "Emerald Scepter",
+  "item.spellcraft.ocean_scepter": "Ocean Scepter",
   "item.spellcraft.nether_scepter": "Nether Scepter",
   "item.spellcraft.ender_scepter": "Ender Scepter"
 }
