Add undead scepter

--- a/src/main/resources/assets/spellcraft/lang/en_us.json
+++ b/src/main/resources/assets/spellcraft/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "itemGroup.spellcraft": "Spellcraft",
   "item.spellcraft.wooden_scepter": "Wooden Scepter",
+  "item.spellcraft.undead_scepter": "Undead Scepter",
   "item.spellcraft.emerald_scepter": "Emerald Scepter",
   "item.spellcraft.ocean_scepter": "Ocean Scepter",
   "item.spellcraft.nether_scepter": "Nether Scepter",
