--- a/src/main/resources/assets/spellcraft/lang/en_gb.json
+++ b/src/main/resources/assets/spellcraft/lang/en_gb.json
@@ -1,6 +1,7 @@
 {
   "itemGroup.spellcraft": "Spellcraft",
   "item.spellcraft.wooden_scepter": "Wooden Sceptre",
+  "item.spellcraft.undead_scepter": "Undead Sceptre",
   "item.spellcraft.emerald_scepter": "Emerald Sceptre",
   "item.spellcraft.ocean_scepter": "Ocean Sceptre",
   "item.spellcraft.ender_scepter": "Ender Sceptre",
