--- a/src/main/resources/assets/spellcraft/lang/en_us.json
+++ b/src/main/resources/assets/spellcraft/lang/en_us.json
@@ -1,9 +1,18 @@
 {
   "itemGroup.spellcraft": "Spellcraft",
+
+  "domain.spellcraft.life": "Domain of Life",
+  "domain.spellcraft.undead": "Domain of Undead",
+  "domain.spellcraft.illager": "Domain of the Illager",
+  "domain.spellcraft.ocean": "Domain of the Ocean",
+  "domain.spellcraft.redstone": "Domain of Redstone",
+  "domain.spellcraft.nether": "Domain of the Nether",
+  "domain.spellcraft.ender": "Domain of the End",
+
   "item.spellcraft.wooden_scepter": "Wooden Scepter",
   "item.spellcraft.undead_scepter": "Undead Scepter",
   "item.spellcraft.emerald_scepter": "Emerald Scepter",
   "item.spellcraft.ocean_scepter": "Ocean Scepter",
   "item.spellcraft.nether_scepter": "Nether Scepter",
-  "item.spellcraft.ender_scepter": "Ender Scepter"
+  "item.spellcraft.ender_scepter": "Ender Scepter",
 }
